--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -37,3 +37,8 @@
     top: 35px;
     left: calc(50% - 3px);
 }
+
+.abouts .active {
+    --tw-text-opacity: 1;
+    color: rgb(220 79 59 / var(--tw-text-opacity));
+}
