--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,66 @@
 @tailwind components;
 @tailwind utilities;
 
+.glide {
+    position: relative;
+    width: 100%;
+    box-sizing: border-box;
+}
+.glide * {
+    box-sizing: inherit;
+}
+.glide__track {
+    overflow: hidden;
+}
+.glide__slides {
+    position: relative;
+    width: 100%;
+    list-style: none;
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
+    touch-action: pan-Y;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    white-space: nowrap;
+    display: flex;
+    flex-wrap: nowrap;
+    will-change: transform;
+}
+.glide__slides--dragging {
+    user-select: none;
+}
+.glide__slide {
+    width: 100%;
+    height: 100%;
+    flex-shrink: 0;
+    white-space: normal;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-tap-highlight-color: transparent;
+}
+.glide__slide a {
+    user-select: none;
+    -webkit-user-drag: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
+.glide__arrows {
+    -webkit-touch-callout: none;
+    user-select: none;
+}
+.glide__bullets {
+    -webkit-touch-callout: none;
+    user-select: none;
+}
+.glide--rtl {
+    direction: rtl;
+}
+
+.glide__arrow--disabled {
+    opacity: 0.3;
+}
+
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(219, 55, 40, 0.3);
     background-color: #f5f5f5;
@@ -82,4 +142,77 @@ select {
 
 #passwordForm .valid {
     background-color: #4dbc18;
+}
+
+.invset-bg {
+    position: absolute;
+    width: 100%;
+    height: 1374px;
+    left: 0px;
+    top: 660px;
+    z-index: -10;
+
+    background: linear-gradient(
+        180deg,
+        rgba(30, 30, 30, 0) 3.33%,
+        #1e1e1e 17.99%,
+        #1e1e1e 55.73%,
+        #1e1e1e 100%
+    );
+}
+.invset-bg2 {
+    position: absolute;
+    width: 532px;
+    height: 532px;
+    left: -175px;
+    top: 859px;
+
+    background: rgba(244, 150, 64, 0.18);
+    filter: blur(250px);
+    border-radius: 800px;
+    z-index: -9;
+}
+
+.invset-bg3 {
+    position: absolute;
+    width: 985px;
+    height: 993px;
+    left: 622px;
+    top: 120px;
+
+    background: rgba(31, 53, 92, 0.7);
+    filter: blur(250px);
+    border-radius: 800px;
+    z-index: -9;
+}
+
+.invset-h1 {
+    letter-spacing: -0.04em;
+    text-transform: uppercase;
+
+    background: linear-gradient(
+        180deg,
+        rgba(250, 250, 250, 0.2) 15.12%,
+        rgba(33, 37, 45, 0.2) 80.81%
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+
+    opacity: 0.7;
+
+    font-weight: 275;
+    font-size: 40px;
+    line-height: 80px;
+    white-space: nowrap;
+}
+
+@media (min-width: 768px) {
+    .invset-bg {
+        height: 1843px;
+    }
+    .invset-h1 {
+        font-size: 100px;
+    }
 }
